hphp/test/slow/await_as_an_expression/error/fn_call2.php.expectf

Fatal error: Await cannot be used as an expression inside another await expression. Pull the inner await out into it's own statement. in %s/fn_call2.php on line 17
